--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "reload:js": "browser-sync reload --port 4000 --files='assets/js/*.js'",
     "watch:js": "watch 'npm run build:js && npm run reload:js' src/js",
     "build": "npm run build:css & npm run build:js",
-    "server": "browser-sync start --config bs.config.js",
-    "watch": "npm run watch:js & npm run watch:css & npm run server"
+    "browser-sync": "browser-sync start --config bs.config.js",
+    "start": "npm run watch:js & npm run watch:css & npm run browser-sync"
   },
   "author": "Knovour",
   "license": "ISC",
@@ -31,13 +31,10 @@
   },
   "dependencies": {
     "elemental": "^0.5.13",
-    "material-design-iconic-font": "^2.2.0",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.3.1"
+    "react-tap-event-plugin": "^0.2.2"
   }
 }
