--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-slick": "^0.11.1",
     "react-tap-event-plugin": "^0.2.2"
   }
 }
