--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "resume",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "clean:css": "rimraf assets/css/*.css",
-    "build:css": "npm run clean:css && postcss -c postcss.config.js",
-    "reload:css": "browser-sync reload --port 4000 --files='assets/css/*.css'",
-    "watch:css": "watch 'npm run build:css && npm run reload:css' src/css",
-    "clean:js": "rimraf assets/js/*.js",
-    "build:js": "npm run clean:js && webpack",
-    "reload:js": "browser-sync reload --port 4000 --files='assets/js/*.js'",
-    "watch:js": "watch 'npm run build:js && npm run reload:js' src/js",
+    "build:css": "postcss -c postcss.config.js",
+    "watch:css": "watch 'npm run build:css' src/css",
+    "build:js": "webpack",
+    "watch:js": "watch 'npm run build:js' src/js",
     "build": "npm run build:css & npm run build:js",
     "browser": "browser-sync start --config bs.config.js",
     "start": "npm run watch:js & npm run watch:css & npm run browser"
@@ -24,11 +20,10 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.5.0",
-    "browser-sync": "^2.11.2",
+    "browser-sync": "^2.12.1",
     "cssnano": "^3.5.2",
     "postcss": "^5.0.17",
     "postcss-cli": "^2.5.1",
-    "rimraf": "^2.5.2",
     "watch": "^0.17.1",
     "webpack": "^1.12.15"
   },
@@ -39,6 +34,6 @@
     "react-addons-css-transition-group": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-slick": "^0.11.1",
-    "react-tap-event-plugin": "^0.2.2"
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
